--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
 name = "dailyship-cfw"
 compatibility_date = "2025-07-05"
-assets = { directory = "./dist/" }
 routes = [
   { pattern = "dailyship.org", custom_domain = true }
 ]
+[assets]
+directory = "./dist/"
+not_found_handling = "404-page"
+
