JS + CSS bundling; 11ty learnings
* bundle JS + CSS for reusable clock component!
* bundler only works with default outnput folder "_site".
* move components folder next to layouts since both are WebC
* file extension not needed to use layout
* default frontmatter per folder (handy for blog)

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,6 @@ routes = [
   { pattern = "dailyship.org", custom_domain = true }
 ]
 [assets]
-directory = "./dist/"
+directory = "./_site/"
 not_found_handling = "404-page"
 
